editar perfil data

--- a/templates/profiles/profile_data.html
+++ b/templates/profiles/profile_data.html
@@ -13,6 +13,7 @@
             <img class="rounded-sm" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F4.bp.blogspot.com%2F-IQIrbJmVx4M%2FUCv-ZlNFbYI%2FAAAAAAAAJsg%2FtSq8wwZ-aF0%2Fs1600%2FProfessionalPortfolioAmandaStone12.jpg&f=1&nofb=1" alt="avator-img1.jpg">
         </a>
           <div class="media-body">
+{#          TODO revisar si existe el username #}
             <p class="font-size-20 font-weight-medium d-inline-block mb-1">{{ user.username }}</p>
               <br>
             <p class="font-size-15 text-muted font-weight-medium d-inline-block mb-1">{{ user.get_full_name }}</p>
@@ -25,7 +26,7 @@
             <p>
                 {{ profile.profile_description }}
             </p>
-{#            TODO edicion perfil#}
+{#            TODO edicion perfil #}
             <span class="text-muted font-size-15 mb-1 d-block">
                 <p class="text-muted">
                    <strong>Criptos preferidas</strong>:
