--- a/templates/profiles/profile_edit_contact.html
+++ b/templates/profiles/profile_edit_contact.html
@@ -23,23 +23,25 @@
                 <div class="contact_method_wrapper">
                 {% if contact_methods %}
                     {% for c in contact_methods %}
+                        <div id ="{{ c.id }}">
                           <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                              <span class="input-group-text"><i class="fa fa-link"></i></span>
+                              <button data-id="{{ c.id }}" type="button" class="btn btn-danger input-group-text delete">
+                                  <i class="fa fa-times"></i></button>
                             </div>
-                            <input name="contact_name_{{ forloop.counter }}" type="text" class="form-control"
-                                   id="contact_name_{{ forloop.counter }}" value="{{ c.name }}" placeholder="Facebook, Telegram ...">
-                            <input name="contact_url_{{ forloop.counter }}" type="text" class="form-control"
-                                   id="contact_url_{{ forloop.counter }}" value="{{ c.url_link }}" placeholder="link / mail / número">
+                            <input id="contact_id_{{ forloop.counter }}" type="hidden" value="{{ c.id }}" class="hidden">
+                            <input type="text" class="form-control" id="contact_name_{{ forloop.counter }}" value="{{ c.name }}" placeholder="Facebook, Telegram ...">
+                            <input type="text" class="form-control" id="contact_url_{{ forloop.counter }}" value="{{ c.url_link }}" placeholder="link / mail / número">
                           </div>
-                          <textarea name="contact_text_{{ forloop.counter }}" type="text" class="form-control" id="contact_text_{{ forloop.counter }}"
+                          <textarea type="text" class="form-control" id="contact_text_{{ forloop.counter }}"
                                     placeholder="Envíame un mensaje, estoy conectado en las tardes">{{ c.description }}</textarea>
                             <hr>
+                        </div>
                     {% endfor %}
                 {% else %}
                       <div class="input-group mb-3">
                         <div class="input-group-prepend">
-                          <span class="input-group-text"><i class="fa fa-link"></i></span>
+                          <button type="button" class="btn btn-danger input-group-text"><i class="fa fa-times"></i></button>
                         </div>
                         <input id="contact_name_1" name="contact_name_1" type="text" class="form-control" placeholder="Facebook, Telegram ...">
                         <input id="contact_url_1" name="contact_url_1" type="text" class="form-control" placeholder="link / mail / número">
@@ -71,31 +73,39 @@
         $("#new_contact_method").on("click", function(){
             counter += 1;
             $(".contact_method_wrapper").append(
+                {#TODO debe eliminar un contacto efectivamente#}
+                '<div id ="0">'+
                 '<div class="input-group mb-3">' +
                 '<div class="input-group-prepend">' +
-                '<span class="input-group-text"><i class="fa fa-link"></i></span>' +
+                '<button data-id="0" type="button" class="btn btn-danger input-group-text delete"><i class="fa fa-times"></i></button>'+
                 '</div>\n' +
-                '<input name="contact_name_number" id="contact_name_number"'.replace("number", counter) +
+                '<input id="contact_id_number"'.replace("number", counter) +
+                'type="hidden" value="0" class="hidden">' +
+                '<input id="contact_name_number"'.replace("number", counter) +
                 ' type="text" class="form-control" placeholder="">' +
-                '<input name="contact_url_number" id="contact_url_number'.replace("number", counter) +
+                '<input id="contact_url_number'.replace("number", counter) +
                 ' type="text" class="form-control" placeholder="">' +
                 '</div>\n' +
-                '<textarea name="contact_text_number" id="contact_text_number"'.replace("number", counter) +
+                '<textarea id="contact_text_number"'.replace("number", counter) +
                 ' type="text" class="form-control"' +
                 'placeholder=""></textarea>' +
-                '<hr>'
+                '<hr></div>'
             );
             console.log("counter: " + counter)
         });
         $("#save_form").on("click", function(e){
             e.preventDefault();
-            let form_data = {"csrfmiddlewaretoken": $('input[name=csrfmiddlewaretoken]').val()};
+            let contact_methods = [];
             for (i = 1; i <= counter; i++){
                 let contact_name = $("#contact_name_"+i).val();
                 let contact_url = $("#contact_url_"+i).val();
                 let contact_text = $("#contact_text_"+i).val();
-                form_data["contact_method " + String(i)] = [contact_name, contact_url, contact_text];
+                let contact_id = $("#contact_id_"+i).val();
+                contact_methods.push([contact_id, contact_name, contact_url, contact_text]);
             }
+
+            let form_data = {"csrfmiddlewaretoken": $('input[name=csrfmiddlewaretoken]').val(),
+                            "contact_methods": contact_methods};
             console.log(form_data);
             {#TODO armar el dict con los datos de contacto#}
             $.ajax({
