edit contact form ajax

--- a/templates/profiles/profile_data.html
+++ b/templates/profiles/profile_data.html
@@ -38,6 +38,7 @@
                 <strong>Métodos de Contacto</strong>:
                 <ul>
                     <li>
+{#                        TODO aca debe loopear los metodos de contacto creados#}
                         Whatsapp: +593998375445 Envíame un mensaje en horarios de oficina 8am - 5pm GMT-5
                     </li>
                 </ul>
