--- a/templates/profiles/profile_edit_contact.html
+++ b/templates/profiles/profile_edit_contact.html
@@ -20,14 +20,18 @@
             <form method="post" id = "contact_method_form">
                 {% csrf_token %}
 {#                TODO submit form backend#}
-                <div class="contact_method_wrapper">
+                <div id="contact_method_wrapper">
                 {% if contact_methods %}
                     {% for c in contact_methods %}
-                        <div id ="{{ c.id }}">
+                        <div id ="div_{{ forloop.counter }}">
                           <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                              <button data-id="{{ c.id }}" type="button" class="btn btn-danger input-group-text delete">
+                              <button data-counter="{{ forloop.counter }}" type="button" class="btn btn-danger input-group-text delete">
                                   <i class="fa fa-times"></i></button>
+                            </div>
+                            <div class="input-group-prepend">
+                              <button data-counter="{{ forloop.counter }}" type="button" class="btn btn-success input-group-text save">
+                                  <i class="fa fa-check"></i></button>
                             </div>
                             <input id="contact_id_{{ forloop.counter }}" type="hidden" value="{{ c.id }}" class="hidden">
                             <input type="text" class="form-control" id="contact_name_{{ forloop.counter }}" value="{{ c.name }}" placeholder="Facebook, Telegram ...">
@@ -38,26 +42,12 @@
                             <hr>
                         </div>
                     {% endfor %}
-                {% else %}
-                      <div class="input-group mb-3">
-                        <div class="input-group-prepend">
-                          <button type="button" class="btn btn-danger input-group-text"><i class="fa fa-times"></i></button>
-                        </div>
-                        <input id="contact_name_1" name="contact_name_1" type="text" class="form-control" placeholder="Facebook, Telegram ...">
-                        <input id="contact_url_1" name="contact_url_1" type="text" class="form-control" placeholder="link / mail / número">
-                      </div>
-                      <textarea name="contact_text_1" type="text" class="form-control" id="contact_text_2"
-                                placeholder="Envíame un mensaje, estoy conectado en las tardes"></textarea>
-                        <hr>
                 {% endif %}
                 </div>
             </form>
         </div>
         <button id="new_contact_method" class="btn btn-success text-uppercase">
                 Nuevo Método de Contacto
-        </button>
-        <button id="save_form" class="btn btn-danger text-uppercase">
-                Guardar
         </button>
 </div>
 {% endblock profile_content %}
@@ -68,58 +58,113 @@
     $( document ).ready(function() {
         $(".hidden").hide()
 
-        let counter = {{ contact_methods|length }}
-        console.log(counter);
+        let counter = {{ contact_methods|length }}  // para coordinar con el forloop counter
+
+        $("#contact_method_wrapper").on("click", ".delete", function(){
+            console.log("Item Counter");
+            let item_counter = $(this).data("counter");
+            console.log(item_counter);
+            let item_div = $("#div_"+item_counter);
+            item_div.hide();
+            let contact_id = $("#contact_id_"+item_counter).val();
+            console.log("Contact ID");
+            console.log(contact_id);
+            if(contact_id==="0") {
+                console.log("Item no existe en el backend");
+            } else {
+                console.log("BORRAR item");
+                data = {
+                    "csrfmiddlewaretoken": $('input[name=csrfmiddlewaretoken]').val(),
+                    "contact_id": contact_id,
+                    "contact_name": 0,
+                    "contact_url": 0,
+                    "contact_text": 0,
+                };
+                console.log(data);
+                $.ajax({
+                    url: "{% url 'profile_edit_contact' %}",
+                    method: "post",
+                    data: data,
+                    success: function(response){
+                        console.log("SUCCESS");
+                    },
+                    error: function(response){
+                        console.log("ERROR");
+                        console.log(response);
+                    }
+                });
+            }
+        });
+
+        $("#contact_method_wrapper").on("click", ".save", function(){
+            let span_icon = $(this).find(".fa");
+
+            span_icon.removeClass("fa-check");
+            span_icon.addClass("fa-spin fa-circle-o-notch");
+
+            console.log("Item Counter");
+            let item_counter = $(this).data("counter");
+            console.log(item_counter);
+            let contact_id = $("#contact_id_"+item_counter).val();
+            let contact_name = $("#contact_name_"+item_counter).val();
+            let contact_url = $("#contact_url_"+item_counter).val();
+            let contact_text = $("#contact_text_"+item_counter).val();
+            console.log("contact_id");
+            console.log(contact_id);
+            console.log("contact_name");
+            console.log(contact_name);
+            console.log("contact_url");
+            console.log(contact_url);
+            console.log("contact_text");
+            console.log(contact_text);
+
+            console.log("GUARDAR item");
+            data = {
+                "csrfmiddlewaretoken": $('input[name=csrfmiddlewaretoken]').val(),
+                "contact_id": contact_id,
+                "contact_name": contact_name,
+                "contact_url": contact_url,
+                "contact_text": contact_text,
+            };
+            console.log(data);
+            $.ajax({
+                    url: "{% url 'profile_edit_contact' %}",
+                    method: "post",
+                    data: data,
+                    success: function(response){
+                        console.log("SUCCESS");
+                        span_icon.removeClass("fa-spin fa-circle-o-notch");
+                        span_icon.addClass("fa-check");
+                    },
+                    error: function(response){
+                        console.log("ERROR");
+                        console.log(response);
+                    }
+                });
+        })
+
         $("#new_contact_method").on("click", function(){
             counter += 1;
-            $(".contact_method_wrapper").append(
-                {#TODO debe eliminar un contacto efectivamente#}
-                '<div id ="0">'+
+            console.log(counter);
+            $("#contact_method_wrapper").append(
+                '<div id ="div_number">'.replace("number", counter) +
                 '<div class="input-group mb-3">' +
                 '<div class="input-group-prepend">' +
-                '<button data-id="0" type="button" class="btn btn-danger input-group-text delete"><i class="fa fa-times"></i></button>'+
-                '</div>\n' +
+                '<button data-counter="number"'.replace("number", counter) +
+                'type="button" class="btn btn-danger input-group-text delete"><i class="fa fa-times"></i></button></div>' +
+                '<div class="input-group-prepend">' +
+                '<button data-counter="number"'.replace("number", counter) +
+                'type="button" class="btn btn-success input-group-text save"><i class="fa fa-check"></i></button> </div>' +
                 '<input id="contact_id_number"'.replace("number", counter) +
                 'type="hidden" value="0" class="hidden">' +
-                '<input id="contact_name_number"'.replace("number", counter) +
-                ' type="text" class="form-control" placeholder="">' +
-                '<input id="contact_url_number'.replace("number", counter) +
-                ' type="text" class="form-control" placeholder="">' +
-                '</div>\n' +
-                '<textarea id="contact_text_number"'.replace("number", counter) +
-                ' type="text" class="form-control"' +
-                'placeholder=""></textarea>' +
-                '<hr></div>'
+                '<input type="text" class="form-control" id="contact_name_number"'.replace("number", counter) +
+                'placeholder="Facebook, Telegram ...">' +
+                '<input type="text" class="form-control" id="contact_url_number"'.replace("number", counter) +
+                'placeholder="link / mail / número"></div>' +
+                '<textarea type="text" class="form-control" id="contact_text_number"'.replace("number", counter) +
+                'placeholder="Envíame un mensaje, estoy conectado en las tardes"></textarea><hr></div>'
             );
             console.log("counter: " + counter)
-        });
-        $("#save_form").on("click", function(e){
-            e.preventDefault();
-            let contact_methods = [];
-            for (i = 1; i <= counter; i++){
-                let contact_name = $("#contact_name_"+i).val();
-                let contact_url = $("#contact_url_"+i).val();
-                let contact_text = $("#contact_text_"+i).val();
-                let contact_id = $("#contact_id_"+i).val();
-                contact_methods.push([contact_id, contact_name, contact_url, contact_text]);
-            }
-
-            let form_data = {"csrfmiddlewaretoken": $('input[name=csrfmiddlewaretoken]').val(),
-                            "contact_methods": contact_methods};
-            console.log(form_data);
-            {#TODO armar el dict con los datos de contacto#}
-            $.ajax({
-                url: "{% url 'profile_edit_contact' %}",
-                method: "post",
-                data: form_data,
-                success: function(response){
-                    console.log("SUCCESS");
-                },
-                error: function(response){
-                    console.log("ERROR");
-                    console.log(response);
-                }
-            })
         });
     });
     </script>
