--- a/templates/profiles/profile_data.html
+++ b/templates/profiles/profile_data.html
@@ -26,7 +26,7 @@
             <p>
                 {{ profile.profile_description }}
             </p>
-{#            TODO edicion perfil #}
+{#            TODO los tipos de letra son distintos #}
             <span class="text-muted font-size-15 mb-1 d-block">
                 <p class="text-muted">
                    <strong>Criptos preferidas</strong>:
@@ -36,11 +36,12 @@
                 </p>
 
                 <strong>Métodos de Contacto</strong>:
-                <ul>
+                <ul class="text-muted">
+                    {% for c in contact_methods %}
                     <li>
-{#                        TODO aca debe loopear los metodos de contacto creados#}
-                        Whatsapp: +593998375445 Envíame un mensaje en horarios de oficina 8am - 5pm GMT-5
+                        <a class="text-muted" target="_blank" href="{{ c.url_link }}">{{ c.name }}</a>: {{ c.description }}
                     </li>
+                    {% endfor %}
                 </ul>
             </span>
           </div>
