--- a/templates/profiles/profile_edit_cryptos.html
+++ b/templates/profiles/profile_edit_cryptos.html
@@ -8,7 +8,7 @@
 <div class="col-md-8 col-lg-9 order-md-1">
     <div class="row">
         <div class="media-body">
-            <p class="font-size-20 font-weight-medium d-inline-block mb-1">Tus criptomonedas aceptadas</p>
+            <p class="font-size-20 font-weight-medium d-inline-block mb-1">Tus criptomonedas preferidas</p>
             <small class="form-text text-muted">
                 Las personas que encuentren tus cursos y eventos van a ver tus criptos preferidas.
                 Puedes incluir la dirección (opcional).
@@ -20,26 +20,27 @@
         <div class="row">
             <form method="post" id = "crypto_method_form">
                 {% csrf_token %}
-{#                TODO submit form backend#}
                 <div id="crypto_method_wrapper">
                 {% if accepted_cryptos %}
                     {% for c in accepted_cryptos %}
                         <div id ="div_{{ forloop.counter }}">
                           <div class="input-group mb-3">
                             <div class="input-group-prepend">
-                              <button data-counter="{{ forloop.counter }}" type="button" class="btn btn-danger input-group-text delete">
+                              <button data-counter="{{ forloop.counter }}" type="button" class="btn btn-danger input-group-text delete"
+                              data-toggle="tooltip" data-placement="left" data-original-title="Eliminar">
                                   <i class="fa fa-times"></i></button>
                             </div>
                             <div class="input-group-prepend">
-                              <button data-counter="{{ forloop.counter }}" type="button" class="btn btn-success input-group-text save">
+                              <button data-counter="{{ forloop.counter }}" type="button" class="btn btn-success input-group-text save"
+                                      data-toggle="tooltip" data-placement="right" data-original-title="Guardar">
                                   <i class="fa fa-check"></i></button>
                             </div>
                             <input id="crypto_id_{{ forloop.counter }}" type="hidden" value="{{ c.id }}" class="hidden">
-                            <input type="text" class="form-control" id="crypto_name_{{ forloop.counter }}" value="{{ c.name }}" placeholder="Nombre">
-                            <input type="text" class="form-control" id="crypto_code_{{ forloop.counter }}" value="{{ c.url_link }}" placeholder="Código">
+                            <input type="text" class="form-control" id="crypto_name_{{ forloop.counter }}" value="{{ c.crypto.name }}" placeholder="Nombre">
+                            <input type="text" class="form-control" id="crypto_code_{{ forloop.counter }}" value="{{ c.crypto.code }}" placeholder="Código">
                           </div>
                           <input type="text" class="form-control" id="crypto_address_{{ forloop.counter }}"
-                                    placeholder="Dirección de tu billetera (copia y pégala aquí)">
+                                    placeholder="Dirección de tu billetera (copia y pégala aquí)" value="{{ c.address }}">
                             <hr>
                         </div>
                     {% endfor %}
@@ -109,15 +110,15 @@
             let crypto_id = $("#crypto_id_"+item_counter).val();
             let crypto_name = $("#crypto_name_"+item_counter).val();
             let crypto_url = $("#crypto_url_"+item_counter).val();
-            let crypto_text = $("#crypto_text_"+item_counter).val();
+            let crypto_address = $("#crypto_address_"+item_counter).val();
             console.log("crypto_id");
             console.log(crypto_id);
             console.log("crypto_name");
             console.log(crypto_name);
             console.log("crypto_url");
             console.log(crypto_url);
-            console.log("crypto_text");
-            console.log(crypto_text);
+            console.log("crypto_address");
+            console.log(crypto_address);
 
             console.log("GUARDAR item");
             data = {
