--- a/templates/profiles/login.html
+++ b/templates/profiles/login.html
@@ -14,7 +14,7 @@
 
               {% if form.errors %}
                 <div class="form-group text-center text-secondary mb-0">
-                  <p class="mb-0">{{ form.errors }} </p>
+                    <p class="mb-0">Usuario y/o contraseña incorrectos</p>
                 </div>
               {% endif %}
 
@@ -31,7 +31,7 @@
             </div>
 
             <div class="form-group text-center text-secondary mb-0">
-              <p class="mb-0">¿No estás registrado? <a class="text-danger" href="#">Unirse a Academia Blockchain</a></p>
+              <p class="mb-0">¿No estás registrado? <a class="text-danger" href="{% url 'profile_register' %}">Unirse a Academia Blockchain</a></p>
             </div>
           </form>
         </div>
