--- a/templates/profiles/register.html
+++ b/templates/profiles/register.html
@@ -45,7 +45,7 @@
                     </div>
 
                     <div class="form-group text-center text-secondary mb-0">
-                      <p class="mb-0">¿Ya estás registrado? <a class="text-danger" href="#">Acceder</a></p>
+                      <p class="mb-0">¿Ya estás registrado? <a class="text-danger" href="{% url 'login' %}">Acceder</a></p>
                     </div>
                   </form>
                 </div>
